--- a/project.config.json
+++ b/project.config.json
@@ -38,7 +38,7 @@
 				{
 					"id": 0,
 					"name": "index",
-					"pathName": "pages/search/index",
+					"pathName": "pages/classification/index",
 					"query": "",
 					"scene": null
 				}
